k8s/nginx/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-17
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: v17
    spec:
      containers:
      - name: nginx
        imagePullPolicy: Always
        image: nginx:1.17.3
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-14
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: v14
    spec:
      containers:
      - name: nginx
        imagePullPolicy: Always
        image: nginx:1.14.2
        ports:
        - containerPort: 80
